# uk-air-quality-control-dashboard

./: .env.example  .gitignore  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/agents/: deployer.agent.md
.github/workflows/: ci.yml
src/: app.py  config.py
src/data/: cities.py  openaq_client.py
src/graph/: chain.py  nodes.py  state.py
src/graph/prompts/: analysis.txt  respond.txt
src/models/: schemas.py
src/ui/: charts.py  chat.py  sidebar.py
tests/: test_chain.py  test_openaq_client.py  test_schemas.py
