[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-air-quality-control-dashboard"
version = "0.1.0"
description = "Streamlit dashboard showing UK city air quality with LLM-powered analysis"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "langgraph>=0.2",
    "langchain-google-genai>=2.0",
    "pydantic>=2.0",
    "plotly>=5.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
